[gd_scene load_steps=5 format=3 uid="uid://bqpukafo2v0vv"]

[ext_resource type="Texture2D" uid="uid://t6f814mrrtwh" path="res://Assets/sprites/avatar.png" id="1_m4tbc"]
[ext_resource type="Script" path="res://Scenes/MainMenu/MainMenuProfile.gd" id="1_p4qr1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v1hhb"]
atlas = ExtResource("1_m4tbc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_8c33c"]
font_size = 8
font_color = Color(0.745098, 0.745098, 0.745098, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="MainMenuProfile" type="HBoxContainer"]
script = ExtResource("1_p4qr1")

[node name="Avatar" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_v1hhb")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Analysis"

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lv10"
label_settings = SubResource("LabelSettings_8c33c")
